--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@guolao/vue-monaco-editor": "^1.5.5",
     "@sentry/vite-plugin": "^2.22.6",
     "@sentry/vue": "^8.39.0",
     "@vavt/v3-extension": "^1.3.2",
+    "@vueup/vue-quill": "^1.2.0",
+    "eruda": "^3.4.3",
     "md-editor-v3": "^5.0.2",
+    "monaco-editor": "^0.52.2",
+    "vconsole": "^3.15.1",
     "vue": "^3.5.12",
     "vue-amazing-ui": "^2.1.3",
     "vue-router": "^4.4.5"
