--- a/package.json
+++ b/package.json
@@ -20,34 +20,33 @@
     "@vavt/v3-extension": "^1.3.2",
     "@vueup/vue-quill": "^1.2.0",
     "eruda": "^3.4.3",
-    "md-editor-v3": "^5.0.2",
-    "monaco-editor": "^0.52.2",
-    "vconsole": "^3.15.1",
-    "vue": "^3.5.12",
-    "vue-amazing-ui": "^2.1.3",
-    "vue-router": "^4.4.5"
+    "lucide-vue-next": "^0.525.0",
+    "md-editor-v3": "^5.7.1",
+    "vue": "^3.5.17",
+    "vue-amazing-ui": "^2.4.14",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
+    "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/eslint-plugin": "1.1.7",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.14.0",
+    "eslint": "^9.30.1",
     "eslint-plugin-vue": "^9.30.0",
     "fighting-design": "^1.0.0-alpha.9",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
-    "prettier": "^3.3.3",
-    "typescript": "~5.6.3",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vite-plugin-vue-devtools": "^7.5.4",
-    "vitest": "^3.1.3",
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.1.10"
   }
 }
