--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sentry/vue": "^8.39.0",
     "@vavt/v3-extension": "^1.3.2",
     "@vueup/vue-quill": "^1.2.0",
+    "element-plus": "^2.10.3",
     "eruda": "^3.4.3",
     "lucide-vue-next": "^0.525.0",
     "md-editor-v3": "^5.7.1",
@@ -43,7 +44,10 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.6.2",
+    "sass": "^1.89.2",
     "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
