--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.0",
+    "@types/quill": "^2.0.14",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/eslint-plugin": "^1.3.4",
