--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
 coloredlogs==15.0.1
-fanbookbotapi==1.2.5
+fanbookbotapi==1.2.8
 Flask==3.1.1
 Requests==2.32.4
 sentry_sdk==2.19.0
 gunicorn
+pyinstrument
